tests/errors/unprovable-cons.fil
import "primitives/core.fil";

// This program should fail type checking because we do not provide evidence
// that L > G.
component Main<G, L>(
  @interface[G, L] go_G: 1,
  @interface[L, L+1] go_L: 1,
  @[G, G+1] left: 32,
  @[L, L+1] right: 32
) -> (
  @[L+2, L+3] out: 32
) {
  L := new Register[32];
  M := new Mult;
  l0 := L<G, G+1, L+1>(left);
  m0 := M<L>(l0.out, right);
  out = m0.out;
}
