tests/errors/unprovable-cons.expect
---CODE---
1
---STDERR---
error: Cannot prove constraint |L - G| >= 1
  ┌─ tests/errors/unprovable-cons.fil:6:3
  │
6 │   @interface[G, L] go_G: 1,
  │   ^^^^^^^^^^^^^^^^^^^^^^^^
  │   │
  │   Invalid interface
  │   Interface allows event to trigger every |L - G| cycle(s)
7 │   @interface[L, L+1] go_L: 1,
8 │   @[G, G+1] left: 32,
  │   ------------------ Signal lasts for 1 cycle(s)

